add dataPlayerS.csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /scripts/fits_250000obs_5vars.RData
 /scripts/fits_220000obs_5vars.RData
 /scripts/fits_10000obs_7vars.RData
+/scripts/working_data/dataPlayerS.csv
